# blizz-test

./: CMakeLists.txt  README.md  SortQuestion.h  UniqueDigits.cpp  UniqueDigits.h  UniqueDigitsQuestion.cpp  UniqueDigitsQuestion.h  main.cpp
question1/: UniqueDigits.cpp  UniqueDigits.h
question2/: DefinedSort.h
question3/: 3c1-average_cards_in_deck.sql  3c2-most_deleted_card.sql
test/: CMakeLists.txt  TestDefinedSort.cpp  TestUniqueDigits.cpp  TimeMetric.cpp  UniqueDigitsTest.cpp
